--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+zlib (1:1.2.11.dfsg-1+deb10u1) buster-security; urgency=high
+
+  * Non-maintainer upload by the Security Team.
+  * Fix a bug that can crash deflate on some input when using Z_FIXED
+    (CVE-2018-25032) (Closes: #1008265)
+
+ -- Salvatore Bonaccorso <carnil@debian.org>  Mon, 28 Mar 2022 16:54:02 +0200
+
 zlib (1:1.2.11.dfsg-1) unstable; urgency=low
 
   * New upstream release (closes: #883180).
